preventing line wraps in menus

--- a/static/page.css
+++ b/static/page.css
@@ -84,6 +84,7 @@
     padding-right: var(--len-thick);
     text-decoration: none;
     display: block;
+    white-space: nowrap;
 }
 
 .dropdown-content a:hover {
